<resources>
    <string name="app_name">base</string>
    <string name="exit_tip">再按一次退出程序</string>
    <string name="app_intro">“优聚”是一款集多个平台的资讯内容、复合型优秀资源和实用功能的APP，打破传统限制，融合多元，发现更多、更优秀、更有趣的东西。后续也会加入更多新的功能。也欢迎各位提出意见。</string>
    <string name="update_url">https://raw.githubusercontent.com/HeYongRui/YouJu/master/app/version_update.json</string>
    <string name="update_title">更新提示</string>
    <string name="update_error">更新失败</string>
    <string name="latest_tip">已是最新版本</string>
    <string name="update">更新</string>
    <string name="downloading">下载中...</string>
    <string name="doing_download">正在下载</string>
    <string name="download_done">下载完成</string>
    <string name="download_progress">下载%1$d%%</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="permisson_title">权限提示</string>
    <string name="read_write_permisson">此功能需要开启读写权限</string>
    <string name="location_permisson">此功能需要开启定位权限</string>
    <string name="related_permisson">此功能需要开启相关权限</string>
    <string name="install_permisson">请开启安装权限</string>
    <string name="system_title">系统提示</string>
    <string name="go_setting">设定</string>
    <string name="error_no_net">无可用网络</string>
    <string name="error_timeout">连接超时</string>
    <string name="error_server">服务器开小差，请稍后重试</string>
    <string name="error_parse">未能请求到数据，攻城狮正在修复</string>
    <string name="error_unknown">哎呀故障了，攻城狮正在修复</string>
    <string name="permission_access_coarse_location">当前服务需要使用定位功能，请前往设置开启</string>
    <string name="next_step">下一步</string>
    <string name="clear_history_tip">是否确定清除所有历史记录</string>
    <string name="clean_success">清理成功</string>
    <string name="complete">完成</string>
    <string name="no_search_content">没有搜索到相关内容</string>
    <string name="no_app_support_tip">手机暂无应用支持打开此文件</string>
    <string name="add">添加</string>
    <string name="collapse">收起</string>
    <string name="unfold">展开</string>
</resources>
