<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp_10"
    android:paddingLeft="@dimen/dp_10"
    android:paddingEnd="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10">

    <View
        android:id="@+id/dash_top"
        android:layout_width="1dp"
        android:layout_height="@dimen/dp_60"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dash_top"
        tools:text="2019\n09-07" />

    <com.heyongrui.base.widget.CollapsedTextView
        android:id="@+id/tv_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_14"
        app:collapsedLines="3"
        app:collapsedText="@string/collapse"
        app:expandedText="@string/unfold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toTopOf="@+id/tv_date"
        app:tipsClickable="true"
        app:tipsColor="@color/colorAccent"
        app:tipsGravity="end"
        app:tipsUnderline="false"
        tools:text="@string/app_name" />

    <View
        android:id="@+id/dash_bottom"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/tv_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintHeight_min="@dimen/dp_60"
        app:layout_constraintStart_toStartOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

</androidx.constraintlayout.widget.ConstraintLayout>